# strawberry-django-firebase-auth

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
strawberry_django_firebase_auth/: apps.py  authentication.py  decorators.py  extension.py  settings.py
tests/: helpers.py  models.py  test_authentication.py
